--- a/00-Introduction/source.tex
+++ b/00-Introduction/source.tex
@@ -6,73 +6,86 @@ Un parangon de système biologique de calcul est sans conteste le cerveau humain
 L'inspiration biologique occupe ainsi une place de premier rang dans les débuts de la recherche en intelligence artificielle. Dans ce sens, les premiers modèles d'apprentissage automatique ont été développés en s'appuyant sur des modèles biologique de neurones, afin de chercher à imiter les capacités d'évolution et d'adaptation à l'origine de la notion d'apprentissage dans les réseaux de neurones biologiques. Le perceptron, modèle à l'origine des réseaux de Deep Learning les plus performants à l'heure actuelle, s'inspirait par exemple d'un modèle de neurone biologique très simplifié~\parencite{McCulloch1990ALC}.
 La diversité des applications actuelles de l'apprentissage automatique et le développement de nombreux modèles ont amené la recherche en apprentissage automatique à se concentrer principalement sur une approche algorithmique et computationnelle de ces réseaux, en particulier pour les architectures de Deep Learning. Cet éloignement de la biologie permet de s'extraire des contraintes physiques liées au neurone pour envisager des règles de calcul adaptées à des tâches spécifiques.
 Néanmoins, la biologie, par sa diversité de comportements encore incompris, reste une source d'inspiration abondante pour apporter des paradigmes alternatifs ou complémentaires aux modèles d'apprentissage existants dans l'état de l'art. De plus, le comportement du cerveau est loin d'être entièrement compris et modélisé, ce qui signifie que les possibilités d'inspiration biologique sont constamment en train d'évoluer.
-Les réseaux de neurones impulsionnels (\emph{Spiking Neural Networks}) sont un exemple de modèle d'apprentissage illustrant une complémentarité récente entre l'approche bio-inspirée et l'approche computationnelle. Ces réseaux de neurones ont été développés dès les années 1990~\cite{Maass1996NetworksOS} et s'appuient directement sur un modèle biologique du neurone~; cependant, ils apparaissent dans de nombreux travaux récents comme une méthode montante dans le domaine de l'apprentissage automatique pour la conception systèmes d'apprentissage moins énergivores et distribués grâce à la conception d'architectures matérielles neuromorphiques telles que LOIHI \footnote{\url{https://www.intel.com/content/www/us/en/research/neuromorphic-computing.html}}.
+Les réseaux de neurones impulsionnels (\emph{Spiking Neural Networks}) sont un exemple de modèle d'apprentissage illustrant une complémentarité récente entre l'approche bio-inspirée et l'approche computationnelle. Ces réseaux de neurones inspirés du codage temporel des populations de neurones ont été développé dans les années 90~\parencite{Maass1996NetworksOS}. Il apparaissent cependant dans de nombreux travaux récents comme une méthode montante dans le domaine de l'apprentissage automatique pour la conception systèmes d'apprentissage moins énergivores et distribués grâce à la conception de nouvelles architectures matérielles neuromorphiques telles que LOIHI \footnote{\url{https://www.intel.com/content/www/us/en/research/neuromorphic-computing.html}}.
 %\cite{Yamazaki2022SpikingNN}
-L'inspiration biologique apporte ainsi de nouveaux paradigmes de calcul pouvant se combiner avec des approches plus appliquées. Nous pensons pour cette raison qu'il est pertinent de continuer à explorer des modèles d'apprentissage automatique inspirés de la biologie.
+L'inspiration biologique apporte ainsi de nouveaux paradigmes de calcul pouvant se combiner avec des approches plus appliquées, et évoluant avec les progrès techniques et matériels de l'informatique.
+Nous pensons pour cette raison qu'il est pertinent de continuer à explorer des modèles d'apprentissage automatique inspirés de la biologie.
 
-Parmi les propriétés inspirées de la biologie, nous nous intéressons à la modularité.
-Cette propriété de modularité est partagée par de nombreux systèmes biologiques et artificiels et présente des avantages en termes de réutilisation, de robustesse aux fautes, de redondance et de traitement local de l'information \parencite{clune_evolutionary_2013}. De nombreuses modélisations générales du cortex cérébral, telles que~\cite{binzegger05, Meunier2009HierarchicalMI,sporns_structure_2013,betzel_multi-scale_2017} proposent ainsi que le cortex est une architecture composée de modules auto-organisés. Ces modules communiquent autour des informations sensorielles collectées par l'organisme. Cette communication est réalisée de façon interne, liant des informations sensorielles et abstraites provenant de différentes parties du cortex et à différentes échelles spatiotemporelles. Enfin, bien qu'une hiérarchie de traitement de l'information apparaisse entre ces modules, certains traitant des entrées sensorielles et d'autres des entrées plus abstraites, de nombreux circuits de rétroactions entre les modules semblent présents à différents niveaux de l'architecture.
-Suivant ce constat, la recherche d'architectures cognitives s'inspirant de l'architecture du cortex cérébral est un enjeu de longue date dans la recherche en apprentissage automatique. Il s'agit de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, qui s'inspirent des architectures modulaires présentes dans le cerveau humain et qui cherchent à imiter certains comportements \parencite{Kotseruba201840YO}. Le développement de la robotique appelle également à envisager de telles architectures cognitives, qui sont directement liées à la perception sensorielle. 
-% Un robot possède en effet de multiples capteurs, qui peuvent être défaillants, ou qui ne sont pas utilisés dans toutes les tâches que le robot doit effectuer. Par ailleurs, on attendrait d'un robot qu'il prennne des décisions en temps continu et qu'il appren
-% Notons que notre démarche se veut d'inspiration biologique, tout en restant dans le domaine de l'informatique.
-% Les notions biologiques que nous considérons restent des constats généraux, que nous voulons implémenter dans une démarche de création de système d'apprentissage informatique. 
+Parmi toutes les inspirations biologique, nous nous intéressons plus spécialement à la notion d'architecture modulaire.
+La propriété de modularité est partagée par de nombreux systèmes biologiques et artificiels et présente des avantages en termes de réutilisation, de robustesse aux fautes, de redondance et de traitement local de l'information \parencite{clune_evolutionary_2013}. De nombreuses modélisations générales du cortex cérébral, telles que~\cite{binzegger05, Meunier2009HierarchicalMI,sporns_structure_2013,betzel_multi-scale_2017} proposent ainsi que le cortex est une architecture composée de modules auto-organisés. Ces modules communiquent autour des informations sensorielles collectées par l'organisme. Cette communication est réalisée de façon interne, liant des informations sensorielles et abstraites provenant de différentes parties du cortex et à différentes échelles spatiotemporelles. Enfin, bien qu'une hiérarchie de traitement de l'information apparaisse entre ces modules, certains traitant des entrées sensorielles et d'autres des entrées plus abstraites, de nombreux circuits de rétroactions entre les modules semblent présents à différents niveaux de l'architecture.
+Suivant ce constat, la recherche d'architectures cognitives s'inspirant de l'architecture du cortex cérébral est un enjeu de longue date dans la recherche en apprentissage automatique. Il s'agit de développer des réseaux de neurones autonomes, capables de mémoire et de prise de décision de façon non supervisée, qui s'inspirent des architectures modulaires présentes dans le cerveau humain et qui cherchent à imiter certains comportements \parencite{Kotseruba201840YO}. 
+Le développement de la robotique et de l'apprentissage incarné appelle également à envisager de telles architectures cognitives, qui sont directement liées à la perception sensorielle.
+Un robot possède en effet de multiples capteurs, qui peuvent être défaillants, ou qui ne sont pas utilisés dans toutes les tâches que le robot doit effectuer. L'incorporation de mécanismes d'apprentissage au sein de tels agents doit également prendre en compte l'aspect temporel et continu du flux de donnée entrant, ce qui appelle à la conception d'architecture d'apprentissage  incluant des boucles sensorimotrices et capables de prise de décision autonomes.
+
 
 Outre l'inspiration biologique liée à la structure corticale, la construction de systèmes d'apprentissage modulaires découle également d'une motivation computationnelle.
-Attardons-nous sur le concept de modularité, qui peut prendre des significations très vastes, de l'informatique à la biologie. 
-Dans sa définition la plus générale, un système modulaire est un système composé de sous-systèmes, les modules, dont chacun peut être ajouté ou supprimé sans impacter l'architecture des autres modules.
-Cette vision générale de la modularité est l'approche généralement privilégiée en sciences et ingénieurie, lorsque l'on décompose un problème à résoudre en un ensemble sous-problèmes, puis que l'on construit des modules visant à résoudre chacun de ces sous-problèmes.
-Nous nous plaçons dans une approche plus spécifique de cet aspect modulaire en s'intéressant uniquement à des architectures dont les modules communiquent entre eux de façon locale, sans être supervisée par un processus externe, via le biais d'interfaces bien définies.
+Définissons plus précisément ce concept de modularité, qui peut prendre des significations très vastes, de l'informatique à la biologie. 
+Dans une définition générale, un système modulaire est un système composé de sous-systèmes, les modules, dont chacun peut être ajouté ou supprimé sans impacter l'architecture des autres modules.
+Cette vision générale de la modularité est l'approche classique privilégiée en sciences et ingénieurie~: pour résoudre un problème compliqué, on le décompose en un ensemble sous-problèmes, puis l'on développe des modules visant à résoudre chacun de ces sous-problèmes.
+Nous nous plaçons dans une définition plus contrainte de cet aspect modulaire en s'intéressant uniquement à des architectures dont les modules communiquent entre eux de façon locale, sans être supervisée par un processus externe, via le biais d'interfaces bien définies.
 Cette vision de la modularité se rapproche plus de la vision biologique, dans laquelle aucun processus global ne vient a priori superviser l'organisation des systèmes. Nous pensons que cette approche modulaire, telle que définie ci-dessus, est propice à faire émerger des nouveaux paradigmes d'apprentissage au sein d'architectures neuronales. 
 En effet, la combinaison de principes et d'algorithmes simples peut mener au développement de mécanismes de calcul complexes au sein du système. Le comportement global du système résulte alors de l'interaction entre les modules et non seulement de la somme des comportements des modules pris individuellement~: il s'agit de systèmes complexes. 
-Des exemples de modèles artificiels ont exploré cette idée de modularité. Un exemple en robotique autonome est l'architecture de \emph{sumsumption} de \cite{brooks_sumsumption_85}. Ces travaux construisent une architecture robotique composée de modules comportementaux simples, tels que "marcher", "regarder", qui interagissent entre eux. L'interaction de tous ces comportements de base permet au système de réagir de manière autonome à son environnement. Dans cet exemple, les modules ont une structure préétablie.
-Pour intégrer le contexte d'apprentissage, nous nous intéressons plutôt à des architectures modulaires dont ces modules sont a priori indifférenciés et interchangeables, et vont se spécialiser dans l'architecture au cours de l'apprentissage.
+Des exemples de modèles artificiels ont exploré cette idée de modularité. Un exemple ancien en robotique autonome est l'architecture de \emph{sumsumption} de \cite{brooks_sumsumption_85}. Ces travaux construisent une architecture robotique composée de modules comportementaux simples, tels que \og marcher \fg{}, \og éviter un objet \fg{}, mais exploités en architecture par la présence de boucles sensori-motrices. L'interaction de tous ces comportements de base permet au système de réagir de manière autonome à son environnement. 
+Dans cet exemple, les modules ont une structure préétablie.
+Pour intégrer le contexte d'apprentissage, nous centrons encore notre champ d'intérêt sur des architectures modulaires dont ces modules sont a priori indifférenciés et interchangeables, et vont se spécialiser dans l'architecture au cours de l'apprentissage. 
+En résumé, nous entendons par architecture modulaire d'apprentissage une architecture composée d'une multiplicité de sous-systèmes indifférenciés, interchangeables et évoluant dans le temps.
+Ils communiquent entre eux par une interface bien définie, et présentent des boucles de rétroaction, leur conférant un aspect dynamique. Cette interaction est traitée localement au sein des modules, sans supervision par un processus extérieur.
+Cette vision de la modularité nous apparaît propice à l'émergence de mécanismes d'apprentissage.
 
 
-Dans cette démarche d'exploration d'un modèle d'apprentissage modulaire inspiré du cortex, nous proposons dans cette thèse de construire une architecture de cartes auto-organisatrices, ou cartes de Kohonen \parencite{Kohonen1982}.
-Les cartes de Kohonen  sont un exemple de modèle d'apprentissage initialement inspiré de considérations biologiques, modélisant de façon très simple l'organisation spatiale observée dans les aires corticales.
+Dans cette démarche d'exploration d'un modèle d'apprentissage modulaire inspiré du cortex, nous proposons dans cette thèse de s'intéresser à l'élaboration d'une architecture de cartes auto-organisatrices, ou cartes de Kohonen \parencite{Kohonen1982}.
+Les cartes de Kohonen sont un exemple de modèle d'apprentissage initialement inspiré de considérations biologiques, modélisant de façon très simple l'organisation spatiale observée dans les aires corticales.
 Ces modèles sont caractérisés par leur capacité à représenter des données de façon ordonnée sur un espace de dimension plus faible (typiquement une ou deux dimensions).
 L'algorithme d'apprentissage d'une carte auto-organisatrice suit un principe assez simple~: elle est composée de vecteurs de l'espace d'entrée (prototypes) positionnés sur une grille de faible dimension, initialement distribués aléatoirement dans l'espace d'entrée. L'apprentissage est réalisé en présentant les entrées une à une à la carte, en trouvant leur \emph{Best Matching Unit} comme le prototype le plus proche de l'entrée, puis en déplaçant ce prototype ainsi que ses voisins dans la grille vers l'entrée.
-\`A l'issue de ce processus d'apprentissage, la grille munie des prototypes est dépliée sur l'espace d'entrée. N'importe quel point de l'espace d'entrée peut alors être représenté par une position sur la grille. 
-%Les cartes de Kohonen sont initialement inspirées des cartes topographiques présentes dans les cortex sensoriels ou moteurs, et présentent des similarités avec ces derniers dans l'organisation finale de leurs prototypes.
+\`A l'issue de ce processus d'apprentissage, la grille munie des prototypes est dépliée sur l'espace d'entrée. N'importe quel point de l'espace d'entrée peut alors être représenté par une position sur la grille.
 
 La littérature autour des cartes de Kohonen, bien qu'extensive, s'est principalement attachée à l'augmentation des performances des cartes sur des applications d'apprentissage automatique et de fouille de données, comme de la compression d'image ou du clustering~\parencite{kohonen_essentials_2013}.
 Nous pensons que leur inspiration biologique, leurs propriétés d'organisation et de représentation en deux dimensions d'un espace complexe et la simplicité de leurs règles de mise à jour en font des candidates naturelles pour la création d'une architecture modulaire d'apprentissage.
-Cette idée d'architecture modulaire de cartes n'est pas nouvelle et est d'ailleurs formulée par Kohonen dès 1995~:
+D'une part, les cartes auto-organisatrices peuvent être vues comme un modèle très simplifié d'une aire corticale. Leur assemblage en architecture permettrait de pousser l'inspiration biologique au niveau de la structure corticale.
+D'autre part, elles implémentent une \emph{représentation} située de l'espace d'entrée. Cette notion de représentation apporte une sémantique dans l'apprentissage d'un espace d'entrée dans une carte de Kohonen, rejoignant une approche inspirée de la cognition.
+De façon plus pratique, cette représentation est constituée de positions en faible dimension, qui sont des informations peu coûteuses à échanger d'un point de vue computationnel.
+
+Cette idée d'architecture modulaire de cartes semble donc découler naturellement de la nature même de l'algorithme, et est d'ailleurs formulée par Kohonen dès 1995~:
 \begin{quote}
 Un objectif à long terme de l'auto-organisation est de créer des systèmes autonomes dont les éléments se contrôlent mutuellement et apprennent les uns des autres. De tels éléments de contrôle peuvent être implémentés par des SOMs spécifiques~; le problème principal est alors l'interface, en particulier la mise à l'échelle automatique des signaux d'interconnexion entre les modules et la collecte de signaux pertinents comme interface entre les modules. Nous laisserons cette idée aux recherches futures.
 Traduit de \cite{Kohonen1995SelfOrganizingM}
 \end{quote}
 
 Depuis, bien que des travaux aient proposé des architectures de carte auto-organisatrices, peu ont effectivement exploré l'aspect topographiquement ordonné et la simplicité des règles mise à jour des poids d'une carte pour les assembler en architectures modulaires comportant des rétroactions~: des architectures non-hiérarchiques. C'est pourquoi nous nous intéressons à cet aspect dans cette thèse.
-% L'objectif des travaux que nous présentons est alors d'explorer l'utilisation d'une carte de Kohonen en tant que module, de définir l'interface entre les modules afin de créer une architecture, et de comprendre les comportements de calcul qui émergent de l'association de ces modules, dans un but à long terme de création d'une architecture modulaire non-hiérarchique de cartes auto-organisatrices.
-
 L'approche que nous avons privilégiée pour la construction d'une telle architecture est ascendante~: nous définissons un modèle en s'appuyant sur l'état de l'art, puis nous cherchons à évaluer son comportement, afin de guider les améliorations ou applications qui en découleront.
-Nous proposons dans cette thèse un modèle de cartes auto-organisatrice pouvant être assemblées en tant que module d'une architecture, CxSOM. L'objectif de la thèse est ensuite de fournir un cadre méthodologique visant à comprendre et observer les mécanismes d'apprentissage émergeant des règles de calcul que nous avons définies.
+L'objectif des travaux que nous présentons est ainsi d'explorer l'utilisation d'une carte de Kohonen en tant que module, de définir l'interface entre les modules afin de créer une architecture, et de comprendre les comportements de calcul qui émergent de l'association de ces modules, dans un but à long terme de création d'une architecture modulaire non-hiérarchique de cartes auto-organisatrices.
+L'objectif de la thèse est ensuite de fournir un cadre méthodologique visant à comprendre et observer les mécanismes d'apprentissage émergeant des règles de calcul que nous avons définies.
 
-La notion d'architecture cognitive présentée plus haut cherche à explorer de grands principes liés à la cognition tels que l'apprentissage non-supervisé, autonome, le traitement de données temporelles, l'apprentissage sur le long terme sans oubli catastrophique des données précédentes et la fusion de données multimodales, s'inspirant du traitement multisensoriel du cerveau humain.
-L'architecture que nous proposons, par sa conception, vise à long terme l'application à de telles tâches. Cette problématique étant très vaste, nous avons choisi dans cette thèse de nous concentrer sur la tâche particulière d'apprentissage associatif de données multimodales. 
-Il s'agit d'apprendre des relations existant entre des entrées provenant de différents espaces, en plaçant cet apprentissage de relations à un niveau interne à l'architecture et non en combinant les entrées. Le but est d'apprendre à la fois une représentation des entrées et de leurs relations.
-Dans cette optique d'apprentissage de représentation de relations entre entrées, nous proposerons des outils de visualisation et des indicateurs permettant de comprendre ces mécanismes.
+L'architecture que nous proposons, par sa conception, vise à long terme l'implémentation de mécanismes généraux liés à la cognition tels que l'apprentissage non-supervisé, autonome, le traitement de données temporelles, l'apprentissage sur le long terme sans oubli catastrophique des données précédentes et la fusion de données multimodales, s'inspirant du traitement multisensoriel du cerveau humain.
+Cette problématique étant extrêmement vaste, nous avons choisi dans cette thèse de nous concentrer sur la tâche particulière d'apprentissage associatif de données multimodales. 
+Il s'agit pour l'architecture d'apprendre des relations existant entre des entrées provenant de différents espaces, en plaçant cet apprentissage de relations à un niveau interne à l'architecture et non en combinant les entrées a priori. Le but est d'apprendre à la fois une représentation des modalités et de leurs relations, tout en gardant une sémantique sur chaque modalité.
 
+\begin{center}
+  $\ast$
+\end{center}
 
-En résumé, cette thèse vise à répondre à deux problématiques principales entremêlées~: proposer une nouvelle architecture non-hiérarchique de cartes auto-organisatrices exploitant l'aspect topographiquement ordonné de ce modèle d'apprentissage, et étudier comment mettre en évidence et évaluer l'apprentissage associatif qui émerge d'une telle architecture.
+En résumé, cette thèse vise à répondre à deux problématiques principales entremêlées~: proposer une nouvelle architecture non-hiérarchique de cartes auto-organisatrices exploitant l'aspect topographiquement ordonné de ce modèle d'apprentissage, et élaborer des méthodes permettant de mettre en évidence et évaluer l'apprentissage associatif qui émerge d'une telle architecture.
+
+\begin{center}
+  $\ast$
+\end{center}
 
 Le manuscrit est organisé de la façon suivante.
-Le chapitre~\ref{chap:architectures} présente un état de l'art des architectures de cartes auto-organisatrices existantes dans la littérature. Ces modèles d'architectures sont issus de plusieurs domaines, de l'apprentissage automatique aux neurosciences computationnelles.
+Le chapitre~\ref{chap:architectures} présente un état de l'art des architectures de cartes auto-organisatrices existant dans la littérature. Ces modèles d'architectures sont issus de plusieurs domaines, de l'apprentissage automatique aux neurosciences computationnelles.
 Le chapitre propose une revue des modèles principaux en s'attachant à unifier les notations et leurs désignations afin d'identifier les points communs et différences principales de conception de ces modèles.
 Cet état de l'art nous permettra de situer le modèle que nous proposons au regard de la littérature existante.
 
-Nous détaillerons ensuite le modèle d'architecture décentralisée de cartes auto-organisatrices que nous proposons dans cette thèse, que nous avons appelé CxSOM, pour \emph{Consensus-driven Multi-SOM}. 
-Nous définissons un modèle de carte qui peut être assemblé à volonté en architecture non-hiérarchiques.
-Dans ce modèle, les activités des différentes cartes sont interdépendantes et l'apprentissage s'appuie sur une recherche de consensus entre les cartes pour la recherche d'un BMU.
+Nous détaillerons ensuite le modèle d'architecture non-hiérarchiques de cartes auto-organisatrices que nous proposons dans cette thèse, que nous avons appelé CxSOM, pour \emph{Consensus-driven Multi-SOM}. 
+Nous définissons un modèle de carte qui peut être assemblé à volonté, de façon modulaire, en architecture non-hiérarchique.
+Ce modèle utilise la position du Best Matching Unit d'une carte comme seule interface entre les modules, rendant les activités des cartes interdépendantes. Pour gérer les rétroactions, l'apprentissage s'appuie sur une recherche de consensus entre les cartes pour la recherche d'un BMU.
 Nous présenterons ce modèle au chapitre~\ref{chap:modele}. Le chapitre~\ref{chap:relaxation} s'attarde ensuite sur une analyse plus approfondie de la recherche de consensus constituant l'interface entre les cartes afin de valider ce mécanisme en tant qu'algorithme de choix de BMU pour l'apprentissage.
 
-Si notre approche a pour but à long terme de concevoir une architecture comportant de nombreux modules ainsi que des connexions temporelles, nous avons concentré cette thèse sur l'analyse expérimentale des comportements d'apprentissage dans des architectures de deux et trois cartes.
-Le pari de l'approche ascendante est de faire émerger des nouveaux comportements~; aussi faut-il pouvoir les mettre en évidence. Nos travaux se sont vite confrontés à une difficulté de visualisation d'une telle architecture de cartes. Cette thèse met l'accent sur une méthodologie d'analyse expérimentale de cette architecture modulaire, ce qui nous permettra d'en tirer des comportements élémentaires qui serviront à poser les jalons de la construction d'une architecture plus complexes.
+Si notre approche a pour but à long terme de concevoir une architecture comportant de nombreux modules ainsi que des connexions temporelles, nous avons concentré cette thèse sur l'analyse expérimentale des comportements d'apprentissage associatif dans des architectures de deux et trois cartes.
+Le pari de l'approche ascendante est de faire émerger des nouveaux comportements, des nouveaux mécanismes de calcul~; aussi faut-il pouvoir les mettre en évidence. Nos travaux se sont vite confrontés à une difficulté de visualisation d'une telle architecture de cartes. Cette thèse met l'accent sur une méthodologie d'analyse expérimentale de cette architecture modulaire, ce qui nous permettra d'en tirer des comportements élémentaires qui serviront à poser les bases de la construction d'une architecture plus complexes.
 Nous introduisons au chapitre \ref{chap:repr} cette méthode expérimentale et un cadre de représentation des entrées, et questionnons comment exprimer qu'une architecture de cartes encode les entrées et leurs relations.
-Nous présentons ensuite au chapitre \ref{chap:analyse} les comportements élémentaires d'apprentissage associatif observés sur des architectures de deux et trois cartes en une dimension, à partir des représentations que nous avons proposées. Nous présenterons en particulier un comportement de prédiction d'entrée, rendu possible par les rétroactions présentes dans le modèle d'architecture.
+Nous présentons ensuite au chapitre \ref{chap:analyse} les comportements élémentaires d'apprentissage associatif observés sur des architectures de deux et trois cartes en une dimension, à partir des représentations que nous avons proposées. Nous présenterons en particulier un comportement de prédiction d'entrée, rendu possible par les rétroactions et la dynamique de recherche du BMU présentes dans le modèle d'architecture.
 Nous explorons au chapitre~\ref{chap:indicateur} des indicateurs numériques d'évaluation de l'apprentissage associatif par l'architecture de cartes, dans le but d'étendre l'analyse du modèle à des architectures plus grandes, qui seraient difficilement représentables graphiquement.
-Le chapitre \ref{chap:analyse2D} étend enfin les mécanismes d'apprentissage que nous avons identifés à des architectures de cartes en deux dimensions, se plaçant comme une étude préliminaire pour saisir la scalabilité du modèle.
+Le chapitre \ref{chap:analyse2D} étend enfin les mécanismes d'apprentissage que nous avons identifiés à des architectures de cartes en deux dimensions, se plaçant comme une étude préliminaire pour saisir la scalabilité du modèle.
 
 
     \begin{figure*}[b]
